Archive2/d8/8c9511a70f7cf7/output
main.cpp: In function 'int main()':
main.cpp:18:11: error: 'f' was not declared in this scope
     greet(f);
           ^
